<resources>
    <string name="app_name">Odijo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>


    <string name="username_email_hint">Username/Email</string>
    <string name="password_hint">password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="app_label">Odijo</string>
    <string name="rate_ksh_hr">Rate(KSH)/HR</string>
    <string name="level">Level</string>
    <string name="qualifications">qualifications</string>


    <string name="search">Search</string>
    <string name="title_activity_base_holder"></string>
    <string name="call_desc">Call representatives are available between 7 am and 7 pm weekdays and 8 am - 1 pm on weekends/Public holidays</string>
    <string name="title_activity_base_blue">BaseActivityBlue</string>
    <string name="version_text">Version 1.0</string>
    <string name="odijo_email">info@odijo.com</string>
    <string name="drop_us_an_email_at">Drop us an email at :</string>
    <string name="phone_n2">0721470890</string>
    <string name="phone_1">0724299405</string>
    <string name="call_us_on">Call us on</string>
    <string name="title_activity_base"></string>
    <string name="title_activity_edit_my_profile">Edit Profile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

</resources>
